--- a/.openapi-generator-ignore
+++ b/.openapi-generator-ignore
@@ -1,5 +1,13 @@
+# Used but at a different location
+**/client/Configuration.java
+**/client/Pair.java
+**/client/ApiException.java
+
+# Unused
 **/ServerConfiguration.java
 **/ServerVariable.java
+**/JSON.java
+**/RFC3339DateFormat.java
 src/main/AndroidManifest.xml
 build.sbt
 pom.xml
