feat(java): Introduce OAuth2Client

--- a/build.gradle
+++ b/build.gradle
@@ -117,3 +117,7 @@ tasks.register('fmt') {
 tasks.register('test-integration') {
     dependsOn testing.suites.integration
 }
+
+tasks.named('check').configure {
+    dependsOn 'spotlessCheck'
+}
