--- a/publish.gradle
+++ b/publish.gradle
@@ -38,14 +38,15 @@ publishing {
                 password = System.getenv('MAVEN_PASSWORD')
             }
         }
-        maven {
-            name = 'GitHubPackages'
-            url = 'https://maven.pkg.github.com/openfga/java-sdk'
-            credentials {
-                username = System.getenv('GITHUB_ACTOR')
-                password = System.getenv('GITHUB_TOKEN')
-            }
-        }
+//        // TODO: Uncomment once Maven Central publishing is verified working.
+//        maven {
+//            name = 'GitHubPackages'
+//            url = 'https://maven.pkg.github.com/openfga/java-sdk'
+//            credentials {
+//                username = System.getenv('GITHUB_ACTOR')
+//                password = System.getenv('GITHUB_TOKEN')
+//            }
+//        }
     }
 }
 
