--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,13 @@ plugins {
     // Publishing
     id 'maven-publish'
     id 'signing'
+    id 'io.github.gradle-nexus.publish-plugin' version '1.3.0'
 }
 
 apply from: 'publish.gradle'
 
 group = 'dev.openfga'
-version = '0.2.0'
+version = '0.2.1'
 
 repositories {
     mavenCentral()
