--- a/example/Makefile
+++ b/example/Makefile
@@ -11,6 +11,10 @@ run:
 	cd "${project_name}" && \
 		./gradlew run
 
+run-kotlin:
+	cd "${project_name}" && \
+		./gradlew -P language=kotlin run
+
 run-openfga:
 	docker pull docker.io/openfga/openfga:${openfga_version} && \
 		docker run -p 8080:8080 docker.io/openfga/openfga:${openfga_version} run
