chore: also run integration tests in CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,8 @@ jobs:
     # runs tests and lints. See the project's build.gradle for configurations.
     - name: Test and Build with Gradle
       run: |
-        ./gradlew build
+        ./gradlew build test-integration
+  
 
   publish-maven-central:
     runs-on: ubuntu-latest
