--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,7 @@ testing {
                 implementation "org.junit.jupiter:junit-jupiter:$junit_version"
                 implementation "org.mockito:mockito-core:5.+"
                 runtimeOnly "org.junit.platform:junit-platform-launcher"
+                implementation "org.wiremock:wiremock:3.5.2"
 
                 // This test-only dependency is convenient but not widely used.
                 // Review project activity before updating the version here.
