--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,9 +10,11 @@ jobs:
   test:
     name: Test and Build OpenFGA
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
-        java: [ '11', '17', '21' ]
+        java: ["11", "17", "21"]
+
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
@@ -20,7 +22,7 @@ jobs:
         uses: actions/setup-java@99b8673ff64fbf99d8d325f52d9a5bdedb8483e9 # v4.2.1
         with:
           java-version: ${{ matrix.java }}
-          distribution: 'temurin'
+          distribution: "temurin"
           cache: gradle
 
       - name: Set up Gradle
@@ -30,7 +32,8 @@ jobs:
         run: |
           ./gradlew build test-integration
 
-      - name: Upload coverage to Codecov
+      - if: matrix.java == '11'
+        name: Upload coverage to Codecov
         uses: codecov/codecov-action@c16abc29c95fcf9174b58eb7e1abf4c866893bc8 # v4.1.1
         continue-on-error: true
         with:
@@ -38,70 +41,72 @@ jobs:
           slug: openfga/java-sdk
 
   publish-maven-central:
+    if: startsWith(github.ref, 'refs/tags/v')
+    needs: [test]
     runs-on: ubuntu-latest
+
     permissions:
       contents: read
       packages: write
-    if: startsWith(github.ref, 'refs/tags/v')
-    needs: [test]
 
     steps:
-    - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
-    - name: Set up JDK
-      uses: actions/setup-java@99b8673ff64fbf99d8d325f52d9a5bdedb8483e9 # v4.2.1
-      with:
-        java-version: 11
-        distribution: 'temurin'
+      - name: Set up JDK
+        uses: actions/setup-java@99b8673ff64fbf99d8d325f52d9a5bdedb8483e9 # v4.2.1
+        with:
+          java-version: 11
+          distribution: "temurin"
 
-    - name: Validate Gradle wrapper
-      uses: gradle/wrapper-validation-action@b231772637bb498f11fdbc86052b6e8a8dc9fc92 # v2.1.2
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@b231772637bb498f11fdbc86052b6e8a8dc9fc92 # v2.1.2
 
-    - name: Publish package
-      uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
-      with:
-        # Tasks created by https://github.com/gradle-nexus/publish-plugin
-        arguments: publishToSonatype closeAndReleaseSonatypeStagingRepository
-      env:
-        MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-        MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
-        ORG_GRADLE_PROJECT_SIGNINGKEY: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGKEY }}
-        ORG_GRADLE_PROJECT_SIGNINGPASSWORD: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGPASSWORD }}
+      - name: Publish package
+        uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
+        with:
+          # Tasks created by https://github.com/gradle-nexus/publish-plugin
+          arguments: publishToSonatype closeAndReleaseSonatypeStagingRepository
+        env:
+          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+          ORG_GRADLE_PROJECT_SIGNINGKEY: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGKEY }}
+          ORG_GRADLE_PROJECT_SIGNINGPASSWORD: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGPASSWORD }}
 
   publish-github-packages:
+    if: startsWith(github.ref, 'refs/tags/v')
+    needs: [test]
     runs-on: ubuntu-latest
+
     permissions:
       contents: read
       packages: write
-    if: startsWith(github.ref, 'refs/tags/v')
-    needs: [test]
 
     steps:
-    - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
-    - name: Set up JDK
-      uses: actions/setup-java@99b8673ff64fbf99d8d325f52d9a5bdedb8483e9 # v4.2.1
-      with:
-        java-version: 11
-        distribution: 'temurin'
+      - name: Set up JDK
+        uses: actions/setup-java@99b8673ff64fbf99d8d325f52d9a5bdedb8483e9 # v4.2.1
+        with:
+          java-version: 11
+          distribution: "temurin"
 
-    - name: Validate Gradle wrapper
-      uses: gradle/wrapper-validation-action@b231772637bb498f11fdbc86052b6e8a8dc9fc92 # v2.1.2
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@b231772637bb498f11fdbc86052b6e8a8dc9fc92 # v2.1.2
 
-    - name: Publish package
-      uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
-      with:
-        # Tasks created by https://docs.gradle.org/current/userguide/publishing_maven.html
-        arguments: publishAllPublicationsToGitHubPackagesRepository
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        ORG_GRADLE_PROJECT_SIGNINGKEY: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGKEY }}
-        ORG_GRADLE_PROJECT_SIGNINGPASSWORD: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGPASSWORD }}
+      - name: Publish package
+        uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
+        with:
+          # Tasks created by https://docs.gradle.org/current/userguide/publishing_maven.html
+          arguments: publishAllPublicationsToGitHubPackagesRepository
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ORG_GRADLE_PROJECT_SIGNINGKEY: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGKEY }}
+          ORG_GRADLE_PROJECT_SIGNINGPASSWORD: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGPASSWORD }}
 
   create-release:
-    runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v')
     needs: [publish-maven-central, publish-github-packages]
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
