feat: support OpenTelemetry metrics

--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     implementation "com.fasterxml.jackson.core:jackson-databind:$jackson_version"
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jackson_version"
     implementation "org.openapitools:jackson-databind-nullable:0.2.6"
+    implementation platform("io.opentelemetry:opentelemetry-bom:1.40.0")
+    implementation "io.opentelemetry:opentelemetry-api"
 }
 
 testing {
