--- a/build.gradle
+++ b/build.gradle
@@ -60,13 +60,13 @@ ext {
 }
 
 dependencies {
-    implementation "com.google.code.findbugs:jsr305:3.0.2"
+    implementation "com.google.code.findbugs:jsr305:3.0.+"
     implementation "com.fasterxml.jackson.core:jackson-core:$jackson_version"
     implementation "com.fasterxml.jackson.core:jackson-annotations:$jackson_version"
     implementation "com.fasterxml.jackson.core:jackson-databind:$jackson_version"
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jackson_version"
-    implementation "org.openapitools:jackson-databind-nullable:0.2.6"
-    implementation platform("io.opentelemetry:opentelemetry-bom:1.40.0")
+    implementation "org.openapitools:jackson-databind-nullable:0.2.+"
+    implementation platform("io.opentelemetry:opentelemetry-bom:1.40.+")
     implementation "io.opentelemetry:opentelemetry-api"
 }
 
@@ -80,7 +80,7 @@ testing {
                 implementation "org.junit.jupiter:junit-jupiter:$junit_version"
                 implementation "org.mockito:mockito-core:5.+"
                 runtimeOnly "org.junit.platform:junit-platform-launcher"
-                implementation "org.wiremock:wiremock:3.8.0"
+                implementation "org.wiremock:wiremock:3.8.+"
 
                 // This test-only dependency is convenient but not widely used.
                 // Review project activity before updating the version here.
@@ -106,8 +106,8 @@ testing {
             dependencies {
                 implementation "com.fasterxml.jackson.core:jackson-core:$jackson_version"
                 implementation "com.fasterxml.jackson.core:jackson-databind:$jackson_version"
-                implementation "org.testcontainers:junit-jupiter:1.19.8"
-                implementation "org.testcontainers:openfga:1.19.8"
+                implementation "org.testcontainers:junit-jupiter:1.19.+"
+                implementation "org.testcontainers:openfga:1.19.+"
                 implementation project()
             }
 
