--- a/example/example1/build.gradle
+++ b/example/example1/build.gradle
@@ -19,11 +19,11 @@ repositories {
 }
 
 ext {
-    jacksonVersion = "2.16.0"
+    jacksonVersion = "2.17.1"
 }
 
 dependencies {
-    implementation("dev.openfga:openfga-sdk:0.4.+")
+    implementation("dev.openfga:openfga-sdk:0.5.0")
 
     // Serialization
     implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion")
