--- a/example/example1/build.gradle
+++ b/example/example1/build.gradle
@@ -23,14 +23,14 @@ ext {
 }
 
 dependencies {
-    implementation("dev.openfga:openfga-sdk:0.6.0")
+    implementation("dev.openfga:openfga-sdk:0.6.1")
 
     // Serialization
     implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion")
     implementation("com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion")
     implementation("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion")
     implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonVersion")
-    implementation("org.openapitools:jackson-databind-nullable:0.2.+")
+    implementation("org.openapitools:jackson-databind-nullable:0.2.6")
 
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
