temp: batchCheck work

--- a/publish.gradle
+++ b/publish.gradle
@@ -41,12 +41,12 @@ publishing {
     }
 }
 
-signing {
-    def signingKey = System.getenv('ORG_GRADLE_PROJECT_SIGNINGKEY')
-    def signingPassword = System.getenv('ORG_GRADLE_PROJECT_SIGNINGPASSWORD')
-    useInMemoryPgpKeys(signingKey, signingPassword)
-    sign publishing.publications.maven
-}
+//signing {
+//    def signingKey = System.getenv('ORG_GRADLE_PROJECT_SIGNINGKEY')
+//    def signingPassword = System.getenv('ORG_GRADLE_PROJECT_SIGNINGPASSWORD')
+//    useInMemoryPgpKeys(signingKey, signingPassword)
+//    sign publishing.publications.maven
+//}
 
 nexusPublishing {
     repositories {
