chore: change v0.8.2-beta.1 to v0.8.2

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ plugins {
 apply from: 'publish.gradle'
 
 group = 'dev.openfga'
-version = '0.8.2-beta.1'
+version = '0.8.2'
 
 repositories {
     mavenCentral()
