fix up manual otel example app

--- a/examples/opentelemetry/.env.example
+++ b/examples/opentelemetry/.env.example
@@ -1,13 +1,13 @@
-# OpenFGA Configuration
+# OpenFGA Configuration (REQUIRED)
 FGA_API_URL=https://api.us1.fga.dev
-FGA_STORE_ID=01ARZ3NDEKTSV4RRFFQ69G5FAV  # Configure with your store ID
-FGA_MODEL_ID=01ARZ3NDEKTSV4RRFFQ69G5FAV  # Configure with your authorization model ID
+FGA_STORE_ID=01K2MXP0VQ061K4E599EFGX6V2
+FGA_MODEL_ID=01K2MXS96FQMF76BC7CSY8MM65
 
-# OpenFGA Authentication (optional)
-# FGA_CLIENT_ID=your_client_id
-# FGA_CLIENT_SECRET=your_client_secret
-# FGA_API_AUDIENCE=https://api.fga.example  # API audience for token requests
-# FGA_API_TOKEN_ISSUER=auth.fga.example  # Token issuer URL for OAuth2
+# Authentication (optional - for authenticated OpenFGA instances)
+FGA_CLIENT_ID=YG9Yytd31iuhY9jyMt1XBvwHDd0MDN3n
+FGA_CLIENT_SECRET=tU9fHAeW-hfpT5LgR9bs_GqFzDNPgLbauJbJ3SmQRggtKCJ0X99v6UzanohxfRMX
+FGA_API_AUDIENCE=https://api.us1.fga.dev/
+FGA_API_TOKEN_ISSUER=auth.fga.dev
 
 # OpenTelemetry Configuration
 OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317
