update no code telemetry example (verified working)

--- a/examples/opentelemetry-no-code/.env.example
+++ b/examples/opentelemetry-no-code/.env.example
@@ -1,13 +1,13 @@
-# OpenFGA Configuration
-FGA_API_URL=https://api.us1.fga.dev
-FGA_STORE_ID=01ARZ3NDEKTSV4RRFFQ69G5FAV  # Configure with your store ID
-FGA_MODEL_ID=01ARZ3NDEKTSV4RRFFQ69G5FAV  # Configure with your authorization model ID
+# OpenFGA Configuration (REQUIRED)
+FGA_API_URL=http://localhost:8080
+FGA_STORE_ID=your-store-id-here
+FGA_MODEL_ID=your-authorization-model-id-here
 
-# OpenFGA Authentication (optional)
-# FGA_CLIENT_ID=your_client_id
-# FGA_CLIENT_SECRET=your_client_secret
-# FGA_API_AUDIENCE=https://api.fga.example  # API audience for token requests
-# FGA_API_TOKEN_ISSUER=auth.fga.example  # Token issuer URL for OAuth2
+# Authentication (optional - for authenticated OpenFGA instances)
+FGA_CLIENT_ID=your-client-id-here
+FGA_CLIENT_SECRET=your-client-secret-here
+FGA_API_AUDIENCE=https://api.fga.example
+FGA_API_TOKEN_ISSUER=auth.fga.example
 
 # Note: No OpenTelemetry configuration needed in .env file!
 # The OpenTelemetry Java agent handles all configuration via:
