--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java-library'
+    id 'java'
 
     // Quality
     id 'jacoco'
@@ -66,7 +66,7 @@ dependencies {
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jackson_version"
     implementation "org.openapitools:jackson-databind-nullable:0.2.6"
     implementation platform("io.opentelemetry:opentelemetry-bom:1.53.0")
-    api "io.opentelemetry:opentelemetry-api"
+    implementation "io.opentelemetry:opentelemetry-api"
 }
 
 testing {
