--- a/examples/opentelemetry/build.gradle
+++ b/examples/opentelemetry/build.gradle
@@ -5,10 +5,55 @@ plugins {
 
 application {
     mainClass = 'dev.openfga.sdk.example.opentelemetry.OpenTelemetryExample'
-    applicationDefaultJvmArgs = [
-        '-Dcom.sun.net.ssl.checkRevocation=false',
-        '-Dtrust_all_cert=true'
+}
+
+// Task to download OpenTelemetry Java agent if not present
+task downloadAgent {
+    group = 'setup'
+    description = 'Download OpenTelemetry Java agent if not present'
+    
+    doLast {
+        def agentFile = file('opentelemetry-javaagent.jar')
+        if (!agentFile.exists()) {
+            println "Downloading OpenTelemetry Java agent..."
+            def agentUrl = 'https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/latest/download/opentelemetry-javaagent.jar'
+            new URL(agentUrl).withInputStream { i ->
+                agentFile.withOutputStream { it << i }
+            }
+            println "Downloaded opentelemetry-javaagent.jar"
+        } else {
+            println "OpenTelemetry agent already exists"
+        }
+    }
+}
+
+// Task to run with OpenTelemetry agent (no-code approach)
+task runWithAgent(type: JavaExec) {
+    group = 'application'
+    description = 'Run the OpenTelemetry example with Java agent (no-code approach)'
+    dependsOn downloadAgent
+    classpath = sourceSets.main.runtimeClasspath
+    mainClass = 'dev.openfga.sdk.example.opentelemetry.OpenTelemetryExample'
+    
+    // Add JVM arguments for OpenTelemetry agent with configuration
+    jvmArgs = [
+        '-javaagent:opentelemetry-javaagent.jar',
+        '-Dotel.service.name=openfga-java-sdk-agent-example',
+        '-Dotel.service.version=1.0.0',
+        '-Dotel.exporter.otlp.endpoint=http://localhost:4317',
+        '-Dotel.exporter.otlp.protocol=grpc'
     ]
+    
+    doFirst {
+        println "🤖 Running with OpenTelemetry Java agent (no-code approach)..."
+        println "Service Name: openfga-java-sdk-agent-example"
+        println "Service Version: 1.0.0"
+        println "Exporter Endpoint: http://localhost:4317"
+        println "Exporter Protocol: grpc"
+        println ""
+        println "Make sure you have an OTLP collector running on localhost:4317"
+        println "The agent automatically instruments the application - no code changes needed!"
+    }
 }
 
 repositories {
@@ -16,31 +61,25 @@ repositories {
 }
 
 ext {
-    jacksonVersion = "2.19.2"
     openTelemetryVersion = "1.32.0"
     openTelemetryAlphaVersion = "1.32.0-alpha"
 }
 
 dependencies {
-    // implementation("dev.openfga:openfga-sdk:0.8.3")
+    // Core FGA SDK (always required)
     implementation("dev.openfga:openfga-sdk")
 
-    // Serialization
-    implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion")
-    implementation("com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion")
-    implementation("com.fasterxml.jackson.core:jackson-databind:$jacksonVersion")
-    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonVersion")
-    implementation("org.openapitools:jackson-databind-nullable:0.2.6")
-
-    // OpenTelemetry SDK for manual configuration
+    // OpenTelemetry SDK dependencies - ONLY NEEDED FOR MANUAL CONFIGURATION (./gradlew run)
+    // When using the Java agent (./gradlew runWithAgent), these dependencies are not required
+    // The agent provides all OpenTelemetry functionality automatically
     implementation("io.opentelemetry:opentelemetry-sdk:$openTelemetryVersion")
     implementation("io.opentelemetry:opentelemetry-exporter-prometheus:$openTelemetryAlphaVersion")
-    implementation 'io.opentelemetry:opentelemetry-exporter-otlp:1.32.0'
-    implementation 'io.opentelemetry:opentelemetry-sdk-extension-autoconfigure:1.32.0'
-    implementation 'io.opentelemetry.semconv:opentelemetry-semconv:1.21.0-alpha'
+    implementation("io.opentelemetry:opentelemetry-exporter-otlp:$openTelemetryVersion")
+    implementation("io.opentelemetry:opentelemetry-sdk-extension-autoconfigure:$openTelemetryVersion")
+    implementation("io.opentelemetry.semconv:opentelemetry-semconv:1.21.0-alpha")
 
-    // Environment variables
-    implementation("io.github.cdimascio:dotenv-java:3.0.0")
+    // Environment variables for this example
+    implementation("io.github.cdimascio:dotenv-java:3.2.0")
 }
 
 // Use spotless plugin to automatically format code
