chore: move example to examples directory

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -12,7 +12,7 @@ updates:
           - "*"
 
   - package-ecosystem: "gradle"
-    directory: "/example/example1"
+    directory: "/examples/basic-examples"
     schedule:
       interval: "monthly"
     groups:
