--- a/examples/opentelemetry/build.gradle
+++ b/examples/opentelemetry/build.gradle
@@ -22,7 +22,6 @@ task downloadAgent {
         if (!agentFile.exists()) {
             println "Downloading OpenTelemetry Java agent..."
             def agentUrl = 'https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/latest/download/opentelemetry-javaagent.jar'
-            def agentUrl = 'https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/latest/download/opentelemetry-javaagent.jar'
             try {
                 new URL(agentUrl).withInputStream { i ->
                     agentFile.withOutputStream { it << i }
@@ -76,8 +75,8 @@ repositories {
 
 ext {
     fgaSdkVersion = "0.9.0"
-    openTelemetryVersion = "1.32.0"
-    openTelemetryAlphaVersion = "1.32.0-alpha"
+    openTelemetryVersion = "1.53.0"
+    openTelemetryAlphaVersion = "1.53.0-alpha"
 }
 
 dependencies {
@@ -97,7 +96,7 @@ dependencies {
     implementation("io.opentelemetry:opentelemetry-exporter-prometheus:$openTelemetryAlphaVersion")
     implementation("io.opentelemetry:opentelemetry-exporter-otlp:$openTelemetryVersion")
     implementation("io.opentelemetry:opentelemetry-sdk-extension-autoconfigure:$openTelemetryVersion")
-    implementation("io.opentelemetry.semconv:opentelemetry-semconv:1.21.0-alpha")
+    implementation("io.opentelemetry.semconv:opentelemetry-semconv:1.34.0")
 
     // Environment variables for this example
     implementation("io.github.cdimascio:dotenv-java:3.2.0")
