--- a/examples/streamed-list-objects/settings.gradle
+++ b/examples/streamed-list-objects/settings.gradle
@@ -1,1 +1,7 @@
-rootProject.name = 'example1'
+rootProject.name = 'streamed-list-objects-example'
+
+includeBuild('../../') {
+    dependencySubstitution {
+        substitute(module('dev.openfga:openfga-sdk')).using(project(':'))
+    }
+}
