feat: use DSL transformer, constants

--- a/examples/streamed-list-objects/build.gradle
+++ b/examples/streamed-list-objects/build.gradle
@@ -19,6 +19,9 @@ dependencies {
     // Use local build of SDK
     implementation files('../../build/libs/openfga-sdk-0.9.3.jar')
 
+    // OpenFGA Language SDK for DSL transformation
+    implementation("dev.openfga:openfga-language:v0.2.0-beta.1")
+
     // Serialization
     implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion")
     implementation("com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion")
