feat: rename and refactor to APIExecutor for consistency

--- a/examples/api-executor/build.gradle
+++ b/examples/api-executor/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 application {
-    mainClass = 'dev.openfga.sdk.example.RawApiExample'
+    mainClass = 'dev.openfga.sdk.example.ApiExecutorExample'
 }
 
 repositories {
