--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,7 +18,7 @@ jobs:
 
     strategy:
       matrix:
-        java: [11, 17, 21]
+        java: [17, 21]
 
     steps:
       - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
@@ -37,7 +37,7 @@ jobs:
         run: |
           ./gradlew build test-integration
 
-      - if: matrix.java == 11
+      - if: matrix.java == 17
         name: Upload coverage to Codecov
         uses: codecov/codecov-action@671740ac38dd9b0130fbe1cec585b89eea48d3de # v5.5.2
         continue-on-error: true
@@ -60,7 +60,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@be666c2fcd27ec809703dec50e508c2fdc7f6654 # v5.2.0
         with:
-          java-version: 11
+          java-version: 17
           distribution: "temurin"
 
       - name: Validate Gradle wrapper
@@ -93,7 +93,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@be666c2fcd27ec809703dec50e508c2fdc7f6654 # v5.2.0
         with:
-          java-version: 11
+          java-version: 17
           distribution: "temurin"
 
       - name: Validate Gradle wrapper
